# openevent

./: CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_cn.md  README.md  README_cn.md  SECURITY.md  SECURITY_cn.md  openevent-server.yaml
docs/: API.md  API_cn.md  CONFIG.md  CONFIG_cn.md
src/common/: status.h
src/server/: main.cpp  server_config.cpp  server_config.h
src/service/: grpc_services.cpp  grpc_services.h  open_event_core.cpp  open_event_core.h
src/storage/: encoding.h  message_store.cpp  message_store.h  metadata_store.cpp  metadata_store.h  rocksdb_message_store.cpp  rocksdb_message_store.h
tests/: core_tests.cpp
